log
Fri 08 Sep 2023 10:11:16 PM UTC: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:13: error: unused variable ‘map’ [-Werror=unused-variable]
   56 |   HashMap * map = (HashMap *) malloc(capacity*sizeof(HashMap));
      |             ^~~
cc1: all warnings being treated as errors
Compilation failed
4829d33
Fri 08 Sep 2023 10:26:38 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|6
total_score: 0/70
24542ed
Fri 08 Sep 2023 10:35:34 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
test.c: In function ‘createMap’:
hashmap.c:58:17: error: ‘*map.capacity’ is used uninitialized [-Werror=uninitialized]
   58 |   map->capacity *= capacity;
      |                 ^~
cc1: all warnings being treated as errors
Compilation failed
47133b1
Fri 08 Sep 2023 10:35:45 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
642d496
Fri 08 Sep 2023 10:36:47 PM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  1|5
total_score: 10/70
dea7c8c
Fri 08 Sep 2023 10:40:16 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
559603a
Fri 08 Sep 2023 10:58:14 PM UTC: 
 hashmap.c | 17 ++++++++++++++---
 1 file changed, 14 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:44:11: error: too few arguments to function ‘hash’
   44 |   int i = hash(key) % map->capacity;
      |           ^~~~
hashmap.c:26:6: note: declared here
   26 | long hash( char * key, long capacity) {
      |      ^~~~
hashmap.c:49:15: error: expected expression before ‘:’ token
   49 |         return:
      |               ^
hashmap.c:49:15: error: ‘return’ with a value, in function returning void [-Werror=return-type]
hashmap.c:42:6: note: declared here
   42 | void insertMap(HashMap * map, char * key, void * value)
      |      ^~~~~~~~~
hashmap.c:55:19: error: expected ‘;’ before ‘:’ token
   55 |   map->current = i:
      |                   ^
      |                   ;
cc1: all warnings being treated as errors
Compilation failed
7598e81
Fri 08 Sep 2023 10:58:22 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:44:11: error: too few arguments to function ‘hash’
   44 |   int i = hash(key) % map->capacity;
      |           ^~~~
hashmap.c:26:6: note: declared here
   26 | long hash( char * key, long capacity) {
      |      ^~~~
hashmap.c:49:15: error: expected expression before ‘:’ token
   49 |         return:
      |               ^
hashmap.c:49:15: error: ‘return’ with a value, in function returning void [-Werror=return-type]
hashmap.c:42:6: note: declared here
   42 | void insertMap(HashMap * map, char * key, void * value)
      |      ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
c338d2c
Fri 08 Sep 2023 10:58:43 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:49:15: error: expected expression before ‘:’ token
   49 |         return:
      |               ^
hashmap.c:49:15: error: ‘return’ with a value, in function returning void [-Werror=return-type]
hashmap.c:42:6: note: declared here
   42 | void insertMap(HashMap * map, char * key, void * value)
      |      ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
01934a7
Fri 08 Sep 2023 10:58:56 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
127656e
Fri 08 Sep 2023 11:17:35 PM UTC: 
 hashmap.c | 14 +++++++++++---
 1 file changed, 11 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:89:26: error: expected ‘;’ before ‘:’ token
   89 |         map-> current = i:
      |                          ^
      |                          ;
Compilation failed
2ee44ad
Fri 08 Sep 2023 11:18:37 PM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 30/70
30e2259
Fri 08 Sep 2023 11:18:55 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
837c2a5
Fri 08 Sep 2023 11:19:23 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
02a8e1d
Fri 08 Sep 2023 11:24:07 PM UTC: 
 hashmap.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
 tests:  11|2
total_score: 50/70
ccd6ecf
Fri 08 Sep 2023 11:28:50 PM UTC: 
 hashmap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  12|2
total_score: 50/70
0f7ea59
Fri 08 Sep 2023 11:31:00 PM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  12|2
total_score: 50/70
86d9aca
Fri 08 Sep 2023 11:32:52 PM UTC: 
 hashmap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  12|2
total_score: 50/70
6291c4b
Fri 08 Sep 2023 11:34:07 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  12|2
total_score: 50/70
ed93280
Fri 08 Sep 2023 11:35:24 PM UTC: 
 hashmap.c | 12 +++---------
 1 file changed, 3 insertions(+), 9 deletions(-)
 tests:  13|2
total_score: 50/70
ba2ade6
Fri 08 Sep 2023 11:35:40 PM UTC: 
 hashmap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  16|1
total_score: 60/70
d10c68f
